upgrade to latest stable groovy-2.5.7